k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app
  namespace: production
  labels:
    app: k8s-app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: k8s-app
